--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lodash": "^4.17.21",
     "nuxt": "^2.15.7",
     "nuxt-lazy-load": "^1.2.7",
-    "prismic-dom": "^2.2.6"
+    "prismic-dom": "^2.2.6",
+    "shopify-buy": "^2.13.0"
   },
   "devDependencies": {
     "@nuxtjs/prismic": "^1.3.1",
